2001-11-04  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile-tests/understanding/dname-hash.c: new. A little test
	  to show the behavior of the new hash coding collision handling.

2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* stress/: new directory for stress tests

	* passfail/: new directory for pass/fail tests

	* stress/gen-names.sh:
	* stress/gen-big-names.sh: stressing of the hash map