@@ -1,6 +1,10 @@
+2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
+
+	* understanding/puzzle.c: testcase for small functions
+
 2001-11-04  Philippe Elie  <ph_e@club-internet.fr>
 
-	* oprofile-tests/understanding/dname-hash.c: new. A little test
+	* understanding/dname-hash.c: new. A little test
 	  to show the behavior of the new hash coding collision handling.
 
 2001-10-14  John Levon  <moz@compsoc.man.ac.uk>
